--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+*.pyc
+
+# database
+*.db
+*.db-journal
+*.db-wal
 
 # testing
 /coverage
@@ -39,3 +45,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
