Workers refatorados para abordagem Heartbeat e conexão com Turso

--- a/workers/Dockerfile
+++ b/workers/Dockerfile
@@ -1,14 +1,25 @@
-# workers/Dockerfile
-FROM python:3.9-slim
+# Usa imagem oficial do Playwright (já vem com Python e Browsers instalados)
+# Isso economiza muita dor de cabeça com dependências do Linux
+FROM mcr.microsoft.com/playwright/python:v1.41.0-jammy
 
 WORKDIR /app
 
-# Instala as dependências
+# Variáveis para garantir logs imediatos
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+
+# Copia requisitos
 COPY requirements.txt .
+
+# Instala dependências Python
+# Nota: libsql-client e pandas precisam ser instalados, o playwright lib já vem
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copia o código do worker
+# Instala apenas o navegador Chromium (mais leve que instalar todos)
+RUN playwright install chromium
+
+# Copia todo o código para dentro do container
 COPY . .
 
-# Comando para rodar o script (ajuste o nome se mudar)
-CMD ["python", "monitor_service.py"]
+# Comando de inicialização correto (apontando para main.py)
+CMD ["python", "main.py"]
