--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.9.0",
+    "@libsql/client": "^0.17.0",
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.90.0",
     "bcryptjs": "^3.0.3",
@@ -17,6 +18,7 @@
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
