--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,9 @@
   "name": "hub-consultare",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.9.0"
+  },
   "scripts": {
     "dev": "concurrently \"next dev\" \"python workers/main.py\" --kill-others --names \"NEXT,PYTHON\" --prefix-colors \"bgBlue.bold,bgYellow.bold\"",
     "build": "next build",
@@ -14,7 +17,6 @@
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.90.0",
     "bcryptjs": "^3.0.3",
-    "better-sqlite3": "^12.5.0",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
