Implementação de relatório de faturamento

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint",
     "db:bootstrap:mysql-schema": "node scripts/bootstrap-mysql-schema.cjs",
     "db:bootstrap:mysql-schema:dry": "node scripts/bootstrap-mysql-schema.cjs --dry-run",
+    "db:backfill:feegow-appointments": "node scripts/backfill-feegow-appointments.cjs",
     "db:migrate:turso-to-mysql": "node scripts/migrate-turso-to-mysql.cjs",
     "db:migrate:turso-to-mysql:dry": "node scripts/migrate-turso-to-mysql.cjs --dry-run",
     "db:migrate:weekly-goals-35-50": "node scripts/migrate-weekly-goals-35-50.cjs",
@@ -23,15 +24,18 @@
     "@libsql/client": "^0.17.0",
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.90.0",
+    "@types/pdfkit": "^0.17.5",
     "bcryptjs": "^3.0.3",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.562.0",
     "mysql2": "^3.16.3",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
+    "pdfkit": "^0.17.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
