--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "mysql2": "^3.16.3",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
