--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "db:validate:turso-mysql": "node scripts/validate-turso-mysql.cjs"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.992.0",
     "@formkit/auto-animate": "^0.9.0",
     "@libsql/client": "^0.17.0",
     "@prisma/client": "^5.22.0",
